Fixed overflow issue

--- a/src/js/partials/header/Header.scss
+++ b/src/js/partials/header/Header.scss
@@ -8,9 +8,10 @@
 }
 
 #header {
-
+  position: relative;
   &.shrink {
     min-height: 200px;
+    z-index: 10;
   }
   #menu {
     position: absolute;
