--- a/src/js/partials/header/actionmenu/ActionMenu.scss
+++ b/src/js/partials/header/actionmenu/ActionMenu.scss
@@ -2,6 +2,7 @@
 @import "../../../../stylesheets/abstracts/_media";
 
 #action-menu {
+  z-index: 10;
   &.expand {
     position: absolute;
   }
