--- a/src/stylesheets/layout/_main.scss
+++ b/src/stylesheets/layout/_main.scss
@@ -10,6 +10,7 @@ body {
   color: $text-color-primary;
   padding: 40px 15px 10px 15px;
   text-align: justify;
+  position: relative;
   h1 {
     color: lighten($text-color-secondary, 10);
   }
